# EuRoC

./: README.md  runscript.sh
misc/: TAB_140731_GrippingStiffness.ods  howto_eclipse  howto_final_install  howto_merge  howto_run  octomap_task41.bt  transformation_list  transformations
src/am_dyn_tf_broadcaster/: CMakeLists.txt  package.xml
src/am_dyn_tf_broadcaster/include/: TFBroadcaster.hpp
src/am_dyn_tf_broadcaster/src/: TFBroadcaster.cpp  main_dyn_tf_broadcaster.cpp  main_tf_broadcaster.cpp
src/am_grasping/: CMakeLists.txt  package.xml
src/am_grasping/include/: GraspPose.hpp  GraspPose2.hpp
src/am_grasping/src/: GetGraspPose_old_server.cpp  GetGraspPose_server.cpp  GetGraspPose_server_Version_0808202014.cpp  GraspPose.cpp  GraspPose2.cpp  Grasping_Dummy_Client.cpp  main_get_grasp_pose.cpp  main_gripper_interface.cpp
src/am_gui/: CMakeLists.txt  package.xml
src/am_gui/src/: main_gui.cpp
src/am_gui/src/gui/: MainWindow.cpp  MainWindow.h  ManipulatorStatusWidget.cpp  ManipulatorStatusWidget.hpp  ServoControl.cpp  ServoControl.h  ServoControlWidget.cpp  ServoControlWidget.h  SimpleControlWidget.cpp  SimpleControlWidget.hpp  StopConditionWidget.cpp  StopConditionWidget.h  TelemetryWidget.cpp  mainwindow.cpp  mainwindow.h  manipulatorstatuswidget.cpp  manipulatorstatuswidget.hpp  simplecontrolwidget.cpp  simplecontrolwidget.hpp  telemetrywidget.cpp  telemetrywidget.hpp
src/am_gui/src/rosinterface/: ROSinterface.cpp  ROSinterface.hpp
src/am_launchfiles/: CMakeLists.txt  final_eval.launch  package.xml  statemachine.launch
src/am_motion_planning/: CMakeLists.txt  package.xml
src/am_motion_planning/include/: MotionPlanning.h  T5MotionPlanning.h  T6MotionPlanning.h
src/am_motion_planning/launch/: am_motion_move_group_interface.launch
src/am_motion_planning/src/: MotionPlanning.cpp  MotionPlanning.h  T5MotionPlanning.cpp  T6MotionPlanning.cpp  T6MotionPlanning.h  main_motion_planning.cpp
src/am_msgs/: CMakeLists.txt  package.xml
src/am_msgs/action/: Vision.action  goalPose.action
src/am_msgs/msg/: Camera.msg  ConveyorBelt.msg  ObjState.msg  Object.msg  Robot.msg  Sensor.msg  Shape.msg  TargetZone.msg
src/am_msgs/srv/: AttachObject.srv  CallSetStopConditions.srv  CheckPoses.srv  CheckZones.srv  DetachObject.srv  GetGraspPose.srv  GetGraspPoseT6.srv  GetStaticTFData.srv  GripperControl.srv  ObjectPickedUp.srv  RemoveObject.srv  SetStaticTFData.srv  TactilePlace.srv  TakeImage.srv
src/am_robot_model/: CMakeLists.txt  package.xml
src/am_robot_model/kuka_lwr/: kuka_lwr.urdf  kuka_lwr_mod.urdf
src/am_robot_model/kuka_lwr_combined/: kuka_lwr_combined.urdf  kuka_lwr_combined_sicher.urdf
src/am_robot_model/kuka_lwr_gripper/: kuka_lwr_gripper.urdf
src/am_robot_model/pg70_gripper/: pg70_gripper.urdf  pg70_gripper_mod.urdf
src/am_statemachine/: CMakeLists.txt  package.xml
src/am_statemachine/action/: test.action
src/am_statemachine/include/: StaticTFBroadcaster.h  euroc_input.hpp  explore_poses.h  explore_snakeposes.hpp  explore_standard.hpp  statemachine.hpp
src/am_statemachine/src/: StaticTFBroadcaster.cpp  euroc_input.cpp  explore_poses.cpp  main_listener.cpp  main_statemachine.cpp  main_testnode.cpp  statemachine.cpp  statemachine.hpp
src/am_stateobserver/: CMakeLists.txt  package.xml
src/am_stateobserver/include/: state_observer.hpp
src/am_stateobserver/src/: main_stateobserver.cpp  state_observer.cpp
src/am_vision/: CMakeLists.txt  package.xml
src/am_vision/include/: MovePantilt.h  vision.hpp  vision_dummy.hpp
src/am_vision/src/: ImageFilter.cpp  ImageFilter.h  MovePantilt.cpp  SimpleColorObj.cpp  SimpleColorObj.h  ampointcloud.cpp  ampointcloud.h  main_vision.cpp  shape_generator.cpp  shape_generator.h  vision.cpp  vision_dummy.cpp
src/crops_manipulator_utils/: CMakeLists.txt  package.xml
src/crops_manipulator_utils/include/: config.hpp  fsm_state.hpp  joint_info.hpp  tf_rot.hpp  utils.hpp
src/crops_manipulator_utils/src/: tf_rot.cpp
src/euroc_c2_msgs/: CMakeLists.txt  package.xml
src/euroc_c2_msgs/msg/: CartesianLimits.msg  CommandedTelemetry.msg  Configuration.msg  Limits.msg  MeasuredTelemetry.msg  Scene.msg  StopCondition.msg  Telemetry.msg
src/euroc_c2_msgs/srv/: EnableServoMode.srv  GetEstimatedExternalForce.srv  GetForwardKinematics.srv  GetTimingAlongJointPath.srv  ListScenes.srv  MoveAlongJointPath.srv  RequestNextObject.srv  SaveLog.srv  SearchIkSolution.srv  SetObjectLoad.srv  SetSensorUpdateDivisor.srv  SetServoTarget.srv  SetStopConditions.srv  StartSimulator.srv  StopSimulator.srv
src/euroc_c2_template/: CMakeLists.txt  package.xml
src/euroc_c2_template/src/: euroc_c2_demo.cpp
src/learning_actionlib/: CMakeLists.txt  package.xml
src/learning_actionlib/src/: fibonacci_client.cpp  fibonacci_server.cpp  goalPose_client.cpp  testing_tf2.cpp
src/lwr_moveit_config/: .setup_assistant  package.xml
src/lwr_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kuka_lwr_ee.srdf  ompl_planning.yaml
src/lwr_moveit_config/launch/: demo_.launch  move_group.launch  moveit.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/moveit_config_mit_gripper/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config_mit_gripper/config/: controllers.yaml  controllers_v2.yaml  joint_limits.yaml  kinematics.yaml  kuka_lwr.srdf  ompl_planning.yaml
src/moveit_config_mit_gripper/config/fake/: controllers.yaml  fake_controllers.yaml
src/moveit_config_mit_gripper/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_lwr_moveit_controller_manager.launch  kuka_lwr_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/moveit_kuka_lwr/src/kuka_lwr_planning/: CMakeLists.txt  package.xml
(+3 files in other folders)
